# dump1090.dependencies.pthread

./: CMakeLists.txt
